# seizu

./: .buildinfo  .dockerignore  .env.example  .eslintrc  .gitignore  .pre-commit-config.yaml  .prettierrc  AGENTS.MD  CHANGELOG.md  Dockerfile  Makefile  NOTICE  Pipfile  README.md  add-ssl.sh  agents.md  docker-compose.neo4j-latest.yml  docker-compose.yml  eslint.config.mjs  genindex.html  gunicorn.conf  index.html  info.html  logging.conf  objects.inv  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  settings.local.json
.config/: setup.sh
.doctrees/: environment.pickle  index.doctree  info.doctree
.doctrees/contact/: code-of-conduct.doctree  security.doctree
.doctrees/dev/: contributing.doctree  dependencies.doctree  docker-compose.doctree  query-validation.doctree  test.doctree
.doctrees/install/: backend.doctree  cli.doctree  dashboard.doctree  mcp-skillsets.doctree  mcp-toolsets.doctree  query-console.doctree  quickstart.doctree  scheduled-queries.doctree  schema.doctree  security.doctree  stats.doctree
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: publish.yml  query-validator-live.yml  scorecard.yml  sphinx.yml  test.yaml
_sources/: index.rst.txt
_sources/contact/: security.md.txt
_sources/dev/: contributing.md.txt  dependencies.md.txt  test.md.txt
_sources/install/: backend.md.txt  dashboard.md.txt  mcp-skillsets.md.txt  mcp-toolsets.md.txt  query-console.md.txt  quickstart.md.txt  scheduled-queries.md.txt  security.md.txt  stats.md.txt
contact/: code-of-conduct.html  security.html
dev/: contributing.html  dependencies.html  docker-compose.html  query-validation.html  test.html
docs/: build.sh  conf.py  requirements.txt  walkthrough-recording-steps.md
docs/root/: index.rst
install/: backend.html  cli.html  dashboard.html  mcp-skillsets.html  mcp-toolsets.html  query-console.html  quickstart.html  scheduled-queries.html  schema.html  security.html  stats.html
public/: index.html  manifest.json
reporting/: __init__.py  app.py  asgi.py  cli.py  dashboard_stats.py  exceptions.py  scheduled_queries.py  settings.py  setup_logging.py  user_watcher.py  wsgi.py
reporting/authnz/: __init__.py  permissions.py
reporting/models/: __init__.py  user.py
reporting/routes/: auth.py  chat.py  config.py  confirmations.py  graph.py  me.py  pagerduty.py  query.py  query_history.py  reports.py  roles.py  scheduled_queries.py  skillsets.py  static.py  toolsets.py  users.py  validate.py
reporting/scheduled_query_modules/: __init__.py  log.py  slack.py  sqs.py  statsd.py
reporting/schema/: chat.py  cli.py  confirmations.py  mcp_config.py  query.py  rbac.py  report_config.py  reporting_config.py
reporting/services/: __init__.py  action_confirmations.py  capability_revision.py  chat_commands.py  chat_graph.py  chat_messages.py  mcp_runtime.py  mcp_server.py  oauth_client.py  oauth_state_cookie.py  query_validator.py  report_query_tokens.py  reporting_neo4j.py  reporting_pagerduty.py  reporting_statsd.py  scheduled_query_validation.py  session_cookie.py
reporting/utils/: dynamodb.py  settings.py
schema/: openapi.json  reporting-schema.json
scripts/: seed_reports_from_yaml.py
seizu_cli/: __main__.py  auth.py  client.py  config.py  main.py  schema.py  state.py
seizu_cli/commands/: auth.py  reports.py  scheduled_queries.py  seed.py  skillsets.py  toolsets.py
seizu_schema/: __init__.py  reporting_config.py
src/: App.js  App.tsx  auth.context.ts  authConfig.context.ts  config.context.js  config.context.ts  cspNonce.ts  features.context.ts  index.js  index.tsx  navigation.ts  routes.js  routes.tsx  setupTests.js  setupTests.ts  userManager.ts
src/api/: authClient.ts
src/components/: AuthDialog.js  (+43 more)
tests/: query_validator_cases.py
(+254 files in other folders)
