[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seizu-cli"
version = "0.1.0"
description = "Command-line interface for the Seizu reporting platform"
requires-python = ">=3.12"
dependencies = [
    "keyring>=24.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.27.1",
    "typer[all]>=0.9.0",
]

[project.scripts]
seizu = "seizu_cli.main:app"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# E203: whitespace before ':' (handled by ruff-format; matches prior black/flake8 behavior)
# E701: multiple statements on one line (colon) — intentionally allowed as before
ignore = ["E203", "E701"]

[tool.ruff.lint.isort]
known-first-party = ["reporting", "seizu_cli", "seizu_schema"]

[tool.hatch.build.targets.wheel]
# Ship the CLI package and the shared schema package.
# The reporting/ backend is not part of the pip-installable distribution.
packages = ["seizu_cli", "seizu_schema"]
