[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seizu"
version = "0.1.0"
description = "Configuration-driven reporting platform for Neo4j graph data"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.0",
    "cryptography>=47.0.0",
    "cyver>=2.0.0",
    "datadog>=0.52.0",
    "fastapi>=0.136.0",
    "gunicorn>=25.0.0",
    "httpx>=0.28.0",
    "keyring>=25.0.0",
    "mcp>=1.27.0",
    "neo4j>=6.0.0",
    "pyjwt[crypto]>=2.12.0",
    "pydantic>=2.13.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.0",
    "requests>=2.33.0",
    "rich>=15.0.0",
    "secure>=2.0.0",
    "shellingham>=1.5.0",
    "slack-sdk>=3.41.0",
    "snowflake-id>=1.0.2",
    "sqlmodel>=0.0.38",
    "typer>=0.25.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
seizu = "seizu_cli.main:app"
seizu-server = "reporting.cli:main"
seizu-scheduled-queries = "reporting.scheduled_queries:main"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
]

[tool.uv.workspace]
members = ["packages/seizu-cli"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# E203: whitespace before ':' (handled by ruff-format; matches prior black/flake8 behavior)
# E701: multiple statements on one line (colon) — intentionally allowed as before
ignore = ["E203", "E701"]

[tool.ruff.lint.isort]
known-first-party = ["reporting", "seizu_cli", "seizu_schema"]

[tool.hatch.build.targets.sdist]
include = [
    "reporting",
    "seizu_cli",
    "seizu_schema",
    "build",
    "gunicorn.conf",
    "logging.conf",
    "README.md",
    "LICENSE",
    "NOTICE",
]

[tool.hatch.build.targets.wheel]
packages = ["reporting", "seizu_cli", "seizu_schema"]
force-include = { "build" = "reporting/static_dist", "gunicorn.conf" = "reporting/gunicorn.conf", "logging.conf" = "reporting/logging.conf" }
